# vRPC

./: readme.md
crates/code_gen/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: app.rs  call.rs  errors.rs  from_request.rs  helpers.rs  lib.rs  responder.rs  router.rs  schema.rs
crates/core/src/extractors/: app.rs  args.rs  mod.rs  provide.rs
crates/core/src/procedure/: mod.rs  procedureable.rs  response.rs  schema.rs  service.rs
crates/core/src/runtime/: procedures.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs  rename.rs  type_enum.rs  type_named_struct.rs  type_unnamed_struct.rs
crates/open_schema/: Cargo.toml
crates/open_schema/src/: applike.rs  lib.rs  procedurelike.rs
crates/open_schema/src/schema/: field_format.rs  field_type.rs  mod.rs  procedure_type.rs  schema_field.rs  schema_field_format.rs  schema_field_rel.rs  schema_field_type.rs  schema_procedure.rs  schema_root.rs  schema_type.rs
crates/open_schema/src/schemable/: mod.rs  schemable_field.rs  schemable_params.rs  schemable_result.rs  schemable_type.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: lib.rs
