[package]
name = "rpc_macros"
version = "2.0.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.35"
proc-macro2 = "1.0.78"
syn = { version = "2.0.52", features = ["full"] }
convert_case = "0.6.0"
