[package]
name = "rpc_openschema"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc_macros = { path = "../macros" }

serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114" }

time = { version = "0.3.34", features = ["serde"] }
errs = { path = "../../errs" }
